--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "react": "^19.1.0",
